# airflow-data-fellowship

./: .gitignore  Notes.md  README.md  docker-compose.yaml  main.py  makefile  pyproject.toml  script_callback.py
config/: airflow.cfg  connections.json
dags/: 12_ special_date.py  14_asset_dependent.py  1_first_dag.py  4_XCOMs_auto.py  5_XCOMs_manual.py  8_schedules_preset.py  asset_13.py  example_dag.py
dags/dbt/: dbt_greenery_dag.py
dags/final_project/: dag1_push_csv_to_minio.py  dag2_process_and_load.py  dag3_dbt_cosmos.py
dags/greenery/: greenery_ingest_addresses.py  greenery_ingest_events.py  greenery_ingest_order_items.py  greenery_ingest_orders.py  greenery_ingest_products.py  greenery_ingest_promos.py  greenery_ingest_users.py
dags/labs/: flash_sale.py  hospital.py  youtube_trending.py
dags/module1_architecture/: example_dag.py
dags/poc/: 00_dag_broken_upstream.py  00_dag_idempotnet_backfill.py  00_dag_incomplete_task_checkpoint.py  00_dag_incomplete_task_saga_pattern.py  00_dag_transit_error.py  01_dag_declaration.py  02_operators.py  03_task_dependencies.py  04_default_args.py  05_scheduling.py  06_data_interval.py  07_connections_hooks.py  08_variables_templating.py  09_catchup_backfill.py  10_callbacks.py  10_schedules_delta.py  11_incremental_load.py  14_asset_dependent.py  2_dag_versioning.py  3_operators.py  6_parallel_tasks.py  7_branches.py  9_schedules_cron.py  README.md  analytics_consumer_pipeline.py  child_analytics_pipeline.py  dag_orchestrate_1.py  (+5 more)
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/: quiz_airflow_data_pipeline.md
(+55 files in other folders)
