[project]
name = "airflow-data-fellowship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "airflow-operators>=0.11.0",
    "apache-airflow==3.2.1",
    "airflow-clickhouse-plugin>=1.3.0",
    "apache-airflow-providers-amazon>=9.0.0",
    "astronomer-cosmos>=1.8.0",
    "dbt-clickhouse>=1.8.0",
    "pyarrow>=24.0.0",
]
