[project]
name = "airflow-data-fellowship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.2.1",
    "airflow-clickhouse-plugin==1.7.0",
    "apache-airflow-providers-amazon==9.29.0",
    "apache-airflow-providers-http==6.0.3",
    "astronomer-cosmos==1.14.2",
    "clickhouse-connect>=1.3.0",
    "clickhouse-driver==0.2.10",
    "dbt-clickhouse==1.10.0",
    "dbt-core==1.11.11",
    "pyarrow==24.0.0",
    "apache-airflow-providers-clickhousedb==1.0.0",
    "mashumaro>=3.17",
]

[tool.uv]
override-dependencies = [
    "mashumaro>=3.17",
]
